# ai_buddies_agents

./: .gitignore  AIBuddies.md  AI_Buddies_Notes.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aibuddies/: __init__.py  buddies.py  cli.py  config.py  context.py  docs.py  llm.py  runtime.py  schedules.py  schedules_llm.py
tests/: test_buddies.py
